--- a/ans_upd_web.yml
+++ b/ans_upd_web.yml
@@ -42,3 +42,17 @@
     ansible.builtin.template:
       src: /srv/httpd.j2
       dest: /etc/httpd.conf
+
+- name: Update web servers
+  hosts: servers-web
+  remote_user: root
+
+  tasks:
+  - name: Ensure apache is at the latest version
+    ansible.builtin.yum:
+      name: httpd
+      state: latest
+  - name: Write the apache config file
+    ansible.builtin.template:
+      src: /srv/httpd.j2
+      dest: /etc/httpd.conf
